complete appt creation

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component 'Appointments', appointments: @appointments %>
+<%= react_component 'Appointments', appointments: @appointments, authenticity_token: form_authenticity_token %>
